overflow fix

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   font-family: "Nunito Sans", sans-serif;
+  overflow: hidden;
 }
 
 #login-background {
